--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,7 @@
 /* index.css */
 @import url('./theme/styles/reset.css');
 @import url('./theme/styles/variables.css');
-@import url('./theme/styles/global.css');
+
 
 body {
   margin: 0;
@@ -10,6 +10,8 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  transform: scale(1);
+  transform-origin: top left;
 }
 
 code {
